--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,49 @@
+$space-cadet: #11111b
+$independence: #4a4e69ff
+$heliotrope-gray: #9a8c98ff
+$silver-pink: #c9ada7ff
+$isabelline: #f2e9e4ff
+$mars: #bd3c1c
+
+*
+  font-weight: 300
+
 .app
-  display: flex
-  justify-content: center
-  align-items: center
   height: 100vh
+  font-family: 'Montserrat', sans-serif
+  background: $space-cadet
+  color: $isabelline
+
+nav
+  display: grid
+  grid-template-rows: 1fr
+  grid-template-columns: 6fr 1fr 1fr 1fr
+  padding: 10px
+
+  #logo
+    display: flex
+    justify-content: left
+
+  div
+    display: flex
+    justify-content: center
+    align-items: center
+    list-style: none
+    font-size: 10pt
+    height: 3em
+    min-width: 6em
+
+  div:hover
+    font-weight: bold
+    color: $mars
+
+h1
+  font-weight: 100
+  text-transform: uppercase
+  text-align: center
+
+main
+  display: flex
+  justify-content: right
+  align-items: center
+  padding: 25px
