add webGL 3d universe simulation

--- a/src/App.sass
+++ b/src/App.sass
@@ -9,7 +9,8 @@ $mars: #bd3c1c
   font-weight: 300
 
 .app
-  height: 100vh
+  min-height: 100vh
+  height: 100%
   font-family: 'Montserrat', sans-serif
   background: $space-cadet
   color: $isabelline
