--- a/src/styles/Navigation.sass
+++ b/src/styles/Navigation.sass
@@ -29,8 +29,10 @@ nav
     min-width: 6em
 
   .unselected:hover
-    text-decoration: underline
+    a
+      text-decoration: underline
 
   .selected
-    font-weight: bold
-    color: $mars
+    a
+      font-weight: bold
+      color: $mars
